--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "ng-animate": "^1.0.0",
+    "ngx-teximate": "^0.3.0",
     "rxjs": "~6.6.0",
     "sakura-js": "^1.1.1",
     "tslib": "^2.3.0",
