--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rw-web",
-  "version": "0.0.1",
+  "version": "0.3.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve -o",
@@ -34,6 +34,7 @@
     "@angular/compiler-cli": "~12.2.0",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
+    "angular-cli-ghpages": "^1.0.0-rc.2",
     "jasmine-core": "~3.8.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
